<?xml version="1.0"?>
<package>
    <name>rviz_restart</name>
    <version>1.10.0</version>
    <description>The vehicle_socket package</description>
    <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
    <license>Apache 2</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>autoware_build_flags</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>roscpp</run_depend>
</package>
