<?xml version="1.0"?>
<package>
    <name>startup_gui</name>
    <version>1.10.0</version>
    <description>startup_gui</description>
    <maintainer email="sai.hideyasu@sit.ac.jp">h_ohta</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>
</package>
