<?xml version="1.0"?>
<package format="2">
  <name>survival_checker</name>
  <version>1.12.0</version>
  <description>The survival_checker package</description>
  <maintainer email="sai.hideyasu@sit.ac.jp">h_ohta</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>autoware_msgs</depend>
  <depend>topic_tools</depend>
</package>
